--- a/index.html
+++ b/index.html
@@ -1,17 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
+  <!DOCTYPE html>
+    <html>
     <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>My Website</title>
-        <link rel="stylesheet" href="./style.css">
-        <link rel="icon" href="./favicon.ico" type="image/x-icon">
+        <title>Scott's YouTube Channel</title>
+	<link rel="stylesheet" href="main.css">
     </head>
     <body>
-        <main>
-            <h1>Welcome to My Website</h1>
-        </main>
-        <script src="index.js"></script>
+		<h3><a href="about.html">His Best Moments</a> | <a href="viral.html">About Scott</a></h3>
+        <h1>Rado The Goat's YouTube Channel</h1>
+        <h2>His most viral video</h2>
     </body>
-</html>
+    </html>
