--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 		<h3><a href="about.html">His Best Moments</a> | <a href="viral.html">About Scott</a></h3>
         <h1>Rado The Goat's YouTube Channel</h1>
         <h2>His most viral video</h2>
-        <div><img src="viralimage.png" alt="ViraVideo Screenshot"></div>
+        <img src="viralimage.png" alt="ViraVideo Screenshot">
     </body>
     </html>
