Added text about image

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
         <h1>Rado The Goat's YouTube Channel</h1>
         <h2>His most viral video</h2>
         <img src="viralpicture.png" alt="ViraVideo Screenshot">
+        <p>This is a picture of Scott's most viral video</p>
     </body>
     </html>
