--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 		<h3><a href="about.html">His Best Moments</a> | <a href="viral.html">About Scott</a></h3>
         <h1>Rado The Goat's YouTube Channel</h1>
         <h2>His most viral video</h2>
-        <img src="viralpicture.png" alt="ViraVideo Screenshot">
+        <img src="viralpicture.png" alt="Viral Video Screenshot">
+        <img src="funnypicture.png" alt="Funny Video Screenshot">
         <p>This is a picture of Scott's most viral video</p>
     </body>
     </html>
