--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <h2>His most viral video</h2>
         <img src="viralpicture.png" alt="Viral Video Screenshot">
         <img src="funnypicture.png" alt="Funny Video Screenshot">
+        <img src="scott.png" alt="A picture of Scott">
         <p>This is a picture of Scott's most viral video</p>
     </body>
     </html>
