--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
         <img src="funnypicture.png" alt="Funny Video Screenshot">
         <img src="scott.png" alt="A picture of Scott">
         <p>This is a picture of Scott's most viral video</p>
+        <p>This is a picture of Scott's funniest moment</p>
+        <p></p>
     </body>
     </html>
