Added image and text for image

--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
         <img src="scott.png" alt="A picture of Scott">
         <p>This is a picture of Scott's most viral video</p>
         <p>This is a picture of Scott's funniest moment</p>
-        <p></p>
+        <p>This is a picture of Scott Pyale</p>
     </body>
     </html>
