--- a/index.html
+++ b/index.html
@@ -11,8 +11,6 @@
         <img src="viralpicture.png" alt="Viral Video Screenshot">
         <img src="funnypicture.png" alt="Funny Video Screenshot">
         <img src="scott.png" alt="A picture of Scott">
-        <p>This is a picture of Scott's most viral video</p>
-        <p>This is a picture of Scott's funniest moment</p>
-        <p>This is a picture of Scott Pyale</p>
+        <p>This is a picture of Scott's most viral video</p><p>This is a picture of Scott's funniest moment</p> <p>This is a picture of Scott Pyale</p>
     </body>
     </html>
