--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="main.css">
     </head>
     <body>
-		<h3><a href="about.html">His Best Moments</a> | <a href="viral.html">About Scott</a></h3>
+		<h3><a href="viral.html">His Best Moments</a> | <a href="about.html">About Scott</a></h3>
         <h1>Rado The Goat's YouTube Channel</h1>
         <h2>His most viral video</h2>
         <img src="viralpicture.png" alt="Viral Video Screenshot">
