--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
 		<h3><a href="viral.html">His Best Moments</a> | <a href="about.html">About Scott</a></h3>
         <h1>Rado The Goat's YouTube Channel</h1>
         <h2>His most viral video</h2>
-        <img src="viralpicture.png" alt="Viral Video Screenshot">
-        <img src="funnypicture.png" alt="Funny Video Screenshot">
-        <img src="scott.png" alt="A picture of Scott">
-        <p>This is a picture of Scott's most viral video</p><p>This is a picture of Scott's funniest moment</p> <p>This is a picture of Scott Pyale</p>
+        <div> <img src="viralpicture.png" alt="Viral Video Screenshot">
+        <p>This is a picture of Scott's most viral video</p></div>
+        <div><img src="funnypicture.png" alt="Funny Video Screenshot">
+        <p>This is a picture of Scott's funniest moment</p></div>
+        <div><img src="scott.png" alt="A picture of Scott">
+        <p>This is a picture of Scott Pyale</p></div>
     </body>
     </html>
