--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 		<h3><a href="viral.html">His Best Moments</a> | <a href="about.html">About Scott</a></h3>
         <h1>Rado The Goat's YouTube Channel</h1>
         <h2>His most viral video</h2>
-        <div style="display:inline-block; text-align:center; width:300px;"> <img src="viralpicture.png" alt="Viral Video Screenshot"width="75%">
+        <div style="display:inline-block; text-align:center; width:300px;"> <img src="viralpicture.png" alt="Viral Video Screenshot"width="200px">
         <p>This is a picture of Scott's most viral video</p></div>
-        <div style="display:inline-block; text-align:center; width:300px;"><img src="funnypicture.png" alt="Funny Video Screenshot"width="75%">
+        <div style="display:inline-block; text-align:center; width:300px;"><img src="funnypicture.png" alt="Funny Video Screenshot"width="200px">
         <p>This is a picture of Scott's funniest moment</p></div>
-        <div style="display:inline-block; text-align:center; width:300px;"><img src="scott.png" alt="A picture of Scott" width="75%">
+        <div style="display:inline-block; text-align:center; width:300px;"><img src="scott.png" alt="A picture of Scott" width="200px">
         <p>This is a picture of Scott Pyale</p></div>
     </body>
     </html>
