--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     <img src="scott.png" style="width:200px; height:auto;">
     <p>This is a picture of Scott Pyale</p>
 </div>
-<p> </p>
+<p> In this website I will be showing you some of Scott's most viral and funniest moments in an attempt to promote his </p>
     </body>
     </html>
