--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     <img src="scott.png" style="width:200px; height:auto;">
     <p>This is a picture of Scott Pyale</p>
 </div>
-<p> In this website I will be showing you some of Scott's most viral and funniest moments in an attempt to promote his </p>
+<p> In this website I will be showing you some of Scott's most viral and funniest moments in an attempt to promote his YouTube channel to more people. I believe that Scott has a chance to make it big in his YouTube career so I am just helping him realise his potential.</p>
     </body>
     </html>
