--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<h3><a href="viral.html">His Best Moments</a> | <a href="about.html">About Scott</a></h3>
         <h1>Rado The Goat's YouTube Channel</h1>
         <h2>His most viral video</h2>
-        <div style="display:inline-block; text-align:left; width:320px;">
+        <div style="display:inline-block; text-align:center; width:320px;">
     <img src="viralpicture.png" style="width:200px; height:auto;">
     <p>This is a picture of Scott's most viral video</p>
     <img src="funnypicture.png" style="width:200px; height:auto;">
