--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <p>This is a picture of Scott's most viral video</p>
     </div>
 
-<div style="display:inline-block; text-align:right; width:450px; margin: 0 20px;">
+<div style="display:inline-block; text-align:center; width:450px; margin: 0 20px;">
     <img src="funnypicture.png" style="width:200px; height:auto;">
     <p>This is a picture of Scott's funniest moment</p>
     </div>
 
-<div style="display:inline-block; text-align:right; width:450px; margin: 0 20px;">
+<div style="display:inline-block; text-align:center; width:450px; margin: 0 20px;">
     <img src="scott.png" style="width:200px; height:auto;">
     <p>This is a picture of Scott Pyale</p>
 </div>
