--- a/about.html
+++ b/about.html
@@ -7,6 +7,6 @@
 <body>
 <h3><a href="index.html">Home</a> | <a href="viral.html">His Best Moments</a></h3>
 <h1> This is Scott </h1>
-<div></div><img src="scott.png" alt="A picture of Scott"></div>
+<div><img src="scott.png" alt="A picture of Scott"></div>
 </body>
 </html>
