--- a/about.html
+++ b/about.html
@@ -3,10 +3,16 @@
 <head> 
 <Title> About Scott </title>
 	<link rel="stylesheet" href="main.css">
+	<meta name="referrer" content="strict-origin-when-cross-origin"/>
 </head>
 <body>
 <h3><a href="index.html">Home</a> | <a href="viral.html">His Best Moments</a></h3>
 <h1> This is Scott </h1>
 <div><img src="scott.png" alt="A picture of Scott"></div>
+<p>This is a picture of Scott Pyale. He is a Y10 student at Onslow college and he is the face of the Rado The Goat YouTube channel.</p>
+<h2>This is his first video</h2>
+<object data="https://www.youtube.com/embed/nfvYDU3SmsE"
+width="560" height="315"style="display:block; margin:0 auto;"></object>
+<p>This is Scott's first video. As you can see he has come a long way from there and his editing and production has significantly improved since then</p>
 </body>
 </html>
