--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
 <Title> About Scott </title>
 	<link rel="stylesheet" href="main.css">
 	<meta name="referrer" content="strict-origin-when-cross-origin"/>
+	<link rel="icon" type="image/png" href="scottsmall.png">
 </head>
 <body>
 <h3><a href="index.html">Home</a> | <a href="viral.html">His Best Moments</a></h3>
