--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <head>
         <title>Scott's YouTube Channel</title>
 	<link rel="stylesheet" href="main.css">
+    <link rel="icon" type="image/png" href="scottsmall.png">
     </head>
     <body>
 		<h3><a href="viral.html">His Best Moments</a> | <a href="about.html">About Scott</a></h3>
